kotlin/semlang-parser/src/test/semlang/validatorTests/fail/nameCollision12.sem

function Foo(): Integer {
  Integer."1"
}

struct Foo {
  a: Integer
}
